<resources>
    <string name="app_name">E-card</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="login">LOGIN </string>
    <string name="first_name">First name: </string>
    <string name="last_name">Last name: </string>
    <string name="employee_number">Employee no: </string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="sign_out">Sign out</string>
    <string name="my_service_description">Some service description</string>
    <string name="my_aid_description">Some AID description</string>
    <string name="id_label" translatable="false">ID:</string>
    <string name="nfc_disabled">NFC is disabled. Do you want to enable it?</string>
    <string name="dialogue_yes">Yes</string>
    <string name="dialogue_no">No</string>
    <string name="dialogue_ok">Ok</string>
    <string name="nfc_unsupported">Device does not support NFC? :-(</string>

</resources>