<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:background="@drawable/login_gradient">


    <EditText
        android:id="@+id/employeeName"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0C5858"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:paddingStart="10dp"
        android:textSize="20sp"
        android:hint="@string/first_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="306dp"
        android:inputType="textPersonName"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/employeeNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0C5858"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:paddingStart="10dp"
        android:textSize="20sp"
        android:hint="@string/employee_number"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:layout_below="@id/employeeName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="number"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/employeePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0C5858"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:paddingStart="10dp"
        android:textSize="20sp"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:layout_below="@id/employeeNumberInput"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/my_button"
        android:layout_below="@id/employeePassword"
        android:text="@string/login"
        android:textColor="?attr/textColor"/>
</RelativeLayout>

