<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/backgroundColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorAccent"
        app:title="@string/app_name"
        app:titleTextColor="?attr/textColor"
        android:theme="@style/AppTheme"
        android:elevation="4dp"/>

    <androidx.cardview.widget.CardView
        android:layout_margin="15dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?attr/colorAccent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:textColor="?attr/textColor"
                        android:text="@string/first_name"
                        android:inputType="text"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="TextViewEdits" />

                    <TextView
                        android:id="@+id/lastName"
                        android:textColor="?attr/textColor"
                        android:text="@string/last_name"
                        android:inputType="text"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="TextViewEdits" />

                    <TextView
                        android:id="@+id/employeeNumber"
                        android:textColor="?attr/textColor"
                        android:text="@string/employee_number"
                        android:inputType="number"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="TextViewEdits" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_alignParentEnd="true"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/profile_pic"/>




                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>